--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "appman-pokedex-2018",
   "version": "0.2.0",
   "private": true,
+  "homepage": "https://kaymind.github.io/appman-test/",
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.4",
+    "gh-pages": "^3.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.2.1",
@@ -19,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "api": "node ./src/server.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
